"""Buildfarm build and test"""

module(
  name = "build_buildfarm",
  repo_name = "build_buildfarm",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "blake3", version = "1.3.3.bcr.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc-java", version = "1.62.2")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5", repo_name = "com_google_googleapis")
bazel_dep(name = "platforms", version = "0.0.8")