"""Buildfarm build and test"""

module(
  name = "build_buildfarm",
  repo_name = "build_buildfarm",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "blake3", version = "1.3.3.bcr.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc-java", version = "1.62.2")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5", repo_name = "com_google_googleapis")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_license", version = "0.0.7")
bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")

# Deps for tests
bazel_dep(
  name = "container_structure_test",
  version = "1.16.0",
  dev_dependency = True,
)

# @todo remove after https://github.com/bazelbuild/remote-apis/pull/293 is merged
bazel_dep(name = "remoteapis", version = "<version>")
archive_override(
  module_name = "remoteapis",
  integrity = "<integrity>",
  strip_prefix = "<strip_prefix>",
  urls = [
    "<zip url>",
  ],
)

IO_NETTY_MODULES = [
  # alphabetical
  "buffer",
  "codec",
  "codec-http",
  "codec-http2",
  "codec-socks",
  "common",
  "handler",
  "handler-proxy",
  "resolver",
  "transport",
  "transport-classes-epoll",
  "transport-classes-kqueue",
  "transport-native-epoll",
  "transport-native-kqueue",
  "transport-native-unix-common",
]

IO_GRPC_MODULES = [
  # alphabetical
  "api",
  "auth",
  "context",
  "core",
  "netty",
  "netty-shaded",
  "protobuf",
  "services",
  "stub",
  "testing",
]

CORE_AWS_MODULES = [
  # alphabetical
  "core",
  "s3",
  "secretsmanager",
]